--- a/style.css
+++ b/style.css
@@ -486,6 +486,9 @@ button:hover {
 
 .popup img {
   padding-top: 20px;
+  width: 50px; 
+  height: 50px;
+  object-fit: contain; 
 }
 
 .popup h3 {
