--- a/style.css
+++ b/style.css
@@ -225,3 +225,14 @@ body{
   vertical-align: middle;
   margin-right: 8px;
 }
+
+.visually-hidden{
+  position: absolute !important;
+  width: 1px; height: 1px;
+  padding: 0; margin: -1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+  border: 0;
+}
