--- a/style.css
+++ b/style.css
@@ -110,11 +110,13 @@ body{
  margin-top:-20px;
 }
 @media (min-width:961px){
- .hero-media{ transform:none; }
+.hero-media{
+  display:flex;
+  justify-content:center;
+  align-self:start;
 }
-.hero-media{ padding-top: 0px;
-             align-self: start;
-            margin-top: -100px; 
+  .portrait{
+  transform: translateY(-60px) !important;  
 }
 .portrait{width:100%;max-width:360px;border-radius:18px;border:1px solid rgba(255,255,255,.08);box-shadow:0 10px 40px rgba(0,0,0,.35)}
 .about{display:grid;grid-template-columns:1.2fr .8fr;gap:24px;align-items:start}
